--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
     "antd": "^4.20.0",
+    "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "sass": "^1.50.1",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
